--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "superagent-charset": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.2",
